--- a/html-formes.html
+++ b/html-formes.html
@@ -1,59 +1,75 @@
-<form action="#" method="post" enctype="multipart/form-data">
-<div id="autorisation">
-<div>
-<label for="UserName">Ваше имя:</label>
-<input id="UserName" type="text" name="username" value="" placeholder="Введите имечко" />
-</div>
-<div>
-	<label for="UserTel">Ваш телефон:</label>
-<input  id="UserTel" type="tel" name="usertel" value="" placeholder="Запишите телефончик" />
-</div>
-<div>
-	<label for="UserMail">Ваш email:</label>
-<input  id="UserMail" type="email" name="userpass" value="" placeholder="Куда слать телеграмму?" />
-</div>
-<div>
-	<label for="UserTel">Ваш пароль:</label>
-<input  id="UserPass" type="password" name="userpass" value="" placeholder="Зашифруйтесь" />
-</div>
-</div>
-<div id="menu">
-	<div>Напитки:
-		<p><input type="radio" name="drink" value="alcohol" />Алкогольные</p>
-		<p><input type="radio" name="drink" value="nonalcohol" />Безалкогольные</p>
-	</div>
-	<div>Кухня:
-		<p><input type="radio" name="kitchen" value="russian" />Русская</p>
-		<p><input type="radio" name="kitchen" value="italian" />Итальянская</p>
-		<p><input type="radio" name="kitchen" value="japanese" />Японская</p>
-	</div>
-</div>
-<div>Опции:
-	<p><input type="checkbox" name="banqueting" value="yes " />Нужен банкетный зал</p>
-	<p><input type="checkbox" name="children" value="yes " />Нужна детская зона</p>
-	<p><input type="checkbox" name="music" value="yes " />Живая музыка</p>
-</div>
-<div>Количество гостей:
-	<select name="guests">
-		<option value="1">1</option>
-		<option value="2">2</option>
-		<option value="3">3</option>
-		<option value="4">4</option>
-	</select>
-</div></br>
-<div>Десерт (выберите один или несколько):</br>
-	<select multiple name="sweets">
-		<option value="cake">Пироженка</option>
-		<option value="cookie">Печенье</option>
-		<option selected value="fruit">Фрукты</option>
-		<option value="icecream">Мороженое</option>
-	</select>
-</div></br>
-<div>Покажите фото своего хомячка:</br>
-<input type="file" name="foto" />
-</div></br>
-<div>Расскажите забавную историю о своем хомячке:</br>
-<textarea type="text" name="story" cols="50" rows="7"></textarea>
-</div></br>
-<button type="submit">Отправить</button>
-</form>
+<!DOCTYPE html>
+<html lang="ru">
+<head>
+	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width,initial-scale=1">
+	<link rel="stylesheet" href="#">
+	<title>Верстка формы</title>
+</head>
+<body>
+	<form action="#" method="post" enctype="multipart/form-data">
+		<div id="autorisation">
+			<h2>Регистрация</h2>
+			<div>
+				<label for="UserName">Ваше имя:</label>
+				<input id="UserName" type="text" name="username" value="" placeholder="Введите имечко" />
+			</div>
+			<div>
+				<label for="UserTel">Ваш телефон:</label>
+				<input id="UserTel" type="tel" name="usertel" value="" placeholder="Запишите телефончик" />
+			</div>
+			<div>
+				<label for="UserMail">Ваш email:</label>
+				<input id="UserMail" type="email" name="userpass" value="" placeholder="Куда слать телеграмму?" />
+			</div>
+			<div>
+				<label for="UserTel">Ваш пароль:</label>
+				<input id="UserPass" type="password" name="userpass" value="" placeholder="Зашифруйтесь" />
+			</div>
+		</div>
+		<div id="menu">
+			<h2>Меню</h2>
+			<div>Напитки:
+				<p><input type="radio" name="drink" value="alcohol" />Алкогольные</p>
+				<p><input type="radio" name="drink" value="nonalcohol" />Безалкогольные</p>
+			</div>
+			<div>Кухня:
+				<p><input type="radio" name="kitchen" value="russian" />Русская</p>
+				<p><input type="radio" name="kitchen" value="italian" />Итальянская</p>
+				<p><input type="radio" name="kitchen" value="japanese" />Японская</p>
+			</div>
+		</div>
+		<div>
+			<h2>Опции:</h2>
+			<p><input type="checkbox" name="banqueting" value="yes " />Нужен банкетный зал</p>
+			<p><input type="checkbox" name="children" value="yes " />Нужна детская зона</p>
+			<p><input type="checkbox" name="music" value="yes " />Живая музыка</p>
+		</div>
+		<div>
+		<h2>Количество гостей:</h2>
+			<select name="guests">
+				<option value="1">1</option>
+				<option value="2">2</option>
+				<option value="3">3</option>
+				<option value="4">4</option>
+			</select>
+		</div></br>
+		<div>
+			<h2>Десерт (выберите один или несколько):</h2></br>
+			<select multiple name="sweets">
+				<option value="cake">Пироженка</option>
+				<option value="cookie">Печенье</option>
+				<option selected value="fruit">Фрукты</option>
+				<option value="icecream">Мороженое</option>
+			</select>
+		</div></br>
+		<div>Покажите фото своего хомячка:</br>
+			<input type="file" name="foto" />
+		</div></br>
+		<div>Расскажите забавную историю о своем хомячке:</br>
+			<textarea type="text" name="story" cols="50" rows="7"></textarea>
+		</div></br>
+		<button type="submit">Отправить</button>
+	</form>
+</body>
+</html>
